# cribbage

./: Cargo.toml
src/: card.rs  main.rs  net.rs
