[package]
name = "cribbage-rs"
version = "0.1.0"
authors = ["Barret Rennie <barret@brennie.ca>"]
license = "MIT/Apache-2.0"
edition = "2018"

[[bin]]
name = "cribbage"
path = "src/main.rs"

[dependencies]
bincode = "1.1.4"
bytes = "0.4.12"
rand = "0.7.0"
serde = { version = "1.0.98", features = ["derive"] }
socket2 = "0.3.10"
structopt = "0.2.18"
tokio = "0.1.22"
